test/link/bit-res-set-bad.out
error: bit-res-set-bad.asm(5): Value $ff00 is not a bit index
error: bit-res-set-bad.asm(4): Value $8 is not a bit index
error: bit-res-set-bad.asm(3): Value $ffffffff is not a bit index
Linking failed with 3 errors
