test/link/bit-res-set-bad.asm
SECTION "test", ROM0
Label:
bit Label - 1, a
res Label + 8, [hl]
set Label | $ff00, b
